--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "db-migrate": "^0.11.5",
     "db-migrate-sqlite3": "^0.4.0",
     "express": "^4.16.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "redis": "^2.8.0",
     "sqlite3": "^4.0.8"
   }
 }
